유저 서비스 추가